# Coursera_and_Udemy

./: git.sh
Advanced_ML_HSE/Natural-Language-Processing/assignment4/: week4-seq2seq.ipynb
Advanced_ML_HSE/Natural-Language-Processing/honor/: seq2seq_with_attention.ipynb  vae-seq2seq.ipynb
Advanced_OpenCV3/LearningOpenCV/AlphaBlending/: alphaBlend
Advanced_OpenCV3/learningopencv/: CMakeLists.txt
Advanced_OpenCV3/learningopencv/AlphaBlending/: alphaBlend.cpp
Advanced_OpenCV3/learningopencv/ColorSpaces/: dataAnalysis.py
NLP_coursera+stanford224n/: NMT date translation with attention.ipynb  NMT en2fr translation.ipynb  nmt_with_attention.ipynb  sentiment classification with TF-Hub.ipynb  tensorboard_example.ipynb  word2vec_from_scratch.ipynb  word2vec_optimized.ipynb
NLP_coursera+stanford224n/.ipynb_checkpoints/: nmt_with_attention-checkpoint.ipynb  tensorboard_example-checkpoint.ipynb  word2vec_from_scratch-checkpoint.ipynb  word2vec_optimized-checkpoint.ipynb
NLP_coursera+stanford224n/md/: NMT en2fr translation.md  word2vec_optimized.md
NLP_coursera+stanford224n/notebooks/: Additional-Dimensionality Reduction.ipynb  Lecture 1 | Natural Language Processing with Deep Learning.ipynb
Projects/img_captioning/: image_captioning.py
Projects/sentiment_analysis/: gradcheck.py  neural.py  run.py  sentiment.py  sgd.py  sigmoid.py  softmax.py  word2vec.py
RL_Udemy/notebooks/: Introduction of RL.ipynb
deeplearningai_coursera/: Structuring Machine Learning Projects - Home _ Coursera.html  cs231+cs229 basic NN.ipynb
(+132 files in other folders)
